--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "ffmpeg_installed": true,
-    "ffmpeg_path": "J:\\program\\Разработки\\CineConvert\\Зона разработки\\CineConvert 0.04alf\\ffmpeg\\bin\\ffmpeg.exe",
-    "ffprobe_path": "J:\\program\\Разработки\\CineConvert\\Зона разработки\\CineConvert 0.04alf\\ffmpeg\\bin\\ffprobe.exe",
+    "ffmpeg_path": "",
+    "ffprobe_path": "",
     "language": "ru"
+
 }
